// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test will work 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorites
    favoritesMatched={Object {}}
    gifts={
        Array [
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
          ]
    }
    isSearching={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "giftList": "",
      "searchBar": <Connect(Component) />,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "giftList": "",
        "searchBar": <Connect(Component) />,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`test will work 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorites
    favoritesMatched={Object {}}
    gifts={
        Array [
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
            Object {
              "id": "PrASdleOrnZ9C",
              "images": Object {
                "preview_gif": Object {
                  "height": "130",
                  "size": "48728",
                  "url": "https://media1.giphy.com/media/PrASdleOrnZ9C/giphy-preview.gif",
                  "width": "210",
                },
              },
              "title": "awake wake up GIF by Internet Cat Video Festival",
            },
          ]
    }
    isSearching={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "giftList": <FavoritesList
        gifts={Object {}}
/>,
      "searchBar": <Connect(Component) />,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "giftList": <FavoritesList
          gifts={Object {}}
/>,
        "searchBar": <Connect(Component) />,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
